# szalinski

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  asset-manifest.json  default.nix  index.html  interesting.md  precache-manifest.190ebb4ed35b1205cfbf6467ef51158e.js  precache-manifest.5391ae86482f57383878e15f697ac0e6.js  precache-manifest.6a320993ebe1d60fc27725015398639a.js  precache-manifest.ceb4260a10b2655cf3284a115e0b62c9.js  scad-parser.py  service-worker.js  sz_params
aec-table2-csgs/: CassetteStorage.scad.csg  HexWrenchHolder.scad.csg  SDCardRack.scad.csg
cads/: dice-different.csexp  dice.csexp  two-loops.csexp  wardrobe.csexp
cads/inverse-csg-solution/: process.sh
case-studies/sexps/: explode-2-3.csexp  explode.csexp  helix.csexp
data/aec-table2-orig-scad-progs/: CassetteStorage.scad  CircleCell.scad  RaspberryPiCover.scad  cnc_endmills_holder.scad  customizable_charger.scad  one-layer-hexholder.scad
data/expected/: box_flat.csexp  cnc_endmill_nohull.csexp  cnc_endmill_with_hull.csexp  gear_flat.csexp  medslide.csexp  nintendo.csexp  pinheader.csexp  sanding.csexp  soldering.csexp  tape.csexp
data/inverse-csg/: 139.scad  143.scad  153.scad  inverse-csg-potentially-runnable
data/ocaml_output/: card_org.csexp  cnc_endmills_holder_nohull.csexp  composition_card.csexp  dice.csexp  hcbitholder_loopsize.csexp  nintendo.csexp  sdcard.csexp  soldering.csexp
ide/: editor.js  index.html  inputs.js
inputs/: README
scripts/: accept.sh  analyze-thingiverse-scrape.sh  check_diff.py  compare_mesh.cpp  compare_mesh.sh  create-diff-scad.sh  evict.sh  hausdorff.py  hausdorff_distance.cpp  input_size.py  mega_json.py  openscad-or-timeout.sh  plot-boxes.py  plot-cdf.py  quarantine.sh  reduce-fn.py  report.py  sample-openscad-times.sh  scrape-thingiverse.sh  table2.py  util.py
src/: au.rs  cad.rs  csg_parser.rs  eval.rs  lib.rs  loop_inference.rs  main.rs  num.rs  permute.rs  rules.rs  solve.rs  synthesize.rs
tests/: files.rs  micro.rs  simple.rs  test.csg
wasm-sz/: Cargo.toml
web/: Cargo.toml  SETUP.md  package-lock.json  package.json
(+12941 files in other folders)
