[package]
name = "szalinski-egg"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>"]
edition = "2018"


[dependencies]
log = "0.4"
ordered-float = "1"
symbolic_expressions = "5.0.3"
smallvec = "0.6"
itertools = "0.8"
indexmap = { version = "1", features = ["serde-1"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

pest = "2"
pest_derive = "2"

env_logger = "0.6"
once_cell = "1"

[dependencies.egg]
git = "https://github.com/mwillsey/egg.git"
rev = "d9a61a7abdcf227b30a010e72bb0cc5a0dc35286"
# path = "/home/mwillsey/src/egg/egg"

[dev-dependencies]
colored-diff = "0.2"

[profile.release]
debug = true
[profile.bench]
debug = true
