[package]
name = "szalinski-egg"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>"]
edition = "2018"


[dependencies]
log = "0.4"
ordered-float = "1"
symbolic_expressions = "5.0.3"
itertools = "0.8"
indexmap = { version = "1", features = ["serde-1"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

pest = "2"
pest_derive = "2"

env_logger = "0.6"
once_cell = "1"

rand = "0.7"
rand_pcg = "0.2"

[dependencies.egg]
version = "0.9.2"
features = ["serde-1"]

[dev-dependencies]
colored-diff = "0.2"

[profile.release]
debug = true
[profile.bench]
debug = true
